--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="second_fragment_label">Second Fragment</string>
     <string name="alertdialog_terms_agreement_title">Términos y Acuerdo de Privacidad</string>
     <string name="exit">Salida</string>
     <string name="accept">Aceptar</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="prompt">solicitud</string>
-    <string name="answer">respuesta</string>
-    <string name="enter_prompt">Ingrese su pregunta…</string>
-    <string name="tv_a">IA:</string>
+    <string name="label_ai">IA:</string>
     <string name="button_prompt">Solicitud</string>
+    <string name="enter_prompt">Ingrese su pregunta…</string>
     <string name="elipsis">…</string>
     <string name="response_thinking">Pensando…</string>
+    <string name="toast_dictation_subscription">Dictado de respuesta próximamente…</string>
     <string name="toast_enter_prompt">Primero, ingrese una solicitud.</string>
     <string name="toast_no_internet">Sin conexión a Internet. Conectar y volver a intentar.</string>
     <string name="toast_prompt_truncated">Se alcanzó la longitud máxima del aviso:
@@ -29,9 +25,18 @@
     <string name="exception_unauthorized_access">HTTP 401: acceso no autorizado api.openai.com!
          Descargar aplicación autorizada:</string>
 
-    <string name="title_activity_settings">Ajustes</string>
-
-    <!-- Terms Screens -->
+    <!-- Account Activity -->
+    <string name="account">Cuenta</string>
+    <string name="login_to_enable_features">Inicie sesión para aumentar los límites de solicitud y
+        respuesta y habilitar funciones adicionales.</string>
+    <string name="login">Acceso</string>
+    <string name="logout">Cerrar sesión</string>
+    <string name="account_label_name">Nombre:</string>
+    <string name="account_label_prompt_limit">Límite de solicitud:</string>
+    <string name="account_label_response_limit">Límite de respuesta:</string>
+    <string name="words">palabras</string>
+    <string name="login_failed">Error de inicio de sesion:</string>
+    <string name="logged_out">Cerrado sesión</string>
     <string name="upgrade">Ascender de Categoría</string>
     <string name="remove_limits_ads">¡Elimine todos los límites de solicitud y respuesta, y elimine
         todos los anuncios! Muy pronto…</string>
@@ -45,6 +50,13 @@
     <string name="join_testers">Unirse al grupo de prueba</string>
     <string name="require_gmail">***Se requiere una dirección de Gmail para unirse al grupo de
         prueba Android ChatGPT3.***</string>
+
+    <!-- Settings Activity -->
+    <string name="title_activity_settings">Ajustes</string>
+
+    <!-- Terms Activity -->
+    <string name="terms">Términos</string>
+    <string name="app_terms_header">Acuerdo de Términos App</string>
     <string name="openai_terms_header">Acuerdo de términos de OpenAI</string>
     <string name="agree_to_terms">Al usar esta aplicación, acepta los siguientes términos:</string>
     <string name="show_terms_agreement">Mostrar acuerdo de términos al inicio</string>
@@ -56,22 +68,6 @@
     <string name="html_app_privacy_policy"><a href="https://chatgpt3-android.app/privacy-policy.html">Política de Privacidad</a></string>
     <string name="html_openai_terms_of_use"><a href="https://openai.com/terms/">Términos de Uso</a></string>
     <string name="html_openai_privacy_policy"><a href="https://openai.com/privacy/">Política de Privacidad</a></string>
-    <string name="login">Acceso</string>
-    <string name="login_to_enable_features">Inicie sesión para aumentar los límites de solicitud y
-        respuesta y habilitar funciones adicionales.</string>
-    <string name="account">Cuenta</string>
-    <string name="manage_account">Gestiona tu cuenta</string>
-    <string name="logout">Cerrar sesión</string>
-    <string name="login_failed">Error de inicio de sesion:</string>
-    <string name="logged_out">Cerrado sesión</string>
-    <string name="terms">Términos</string>
-    <string name="app_terms_header">Acuerdo de Términos App</string>
-    <string name="account_label_name">Nombre:</string>
-    <string name="anon">anon</string>
-    <string name="account_label_prompt_limit">Límite de solicitud:</string>
-    <string name="account_label_response_limit">Límite de respuesta:</string>
-    <string name="words">palabras</string>
-    <string name="response_dictation_requires_subscription">Dictado de respuesta próximamente…</string>
 
     <!-- Random prompts -->
     <string name="toast_login_generate_random_prompts">Inicie sesión para generar avisos aleatorios</string>
