--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,8 @@
 
     <!-- Settings Activity -->
     <string name="title_activity_settings">Settings</string>
+    <string name="dictation">Dictation</string>
+    <string name="automatically_dictate_responses">Automatically dictate responses</string>
 
     <!-- Terms Activity -->
     <string name="terms">Terms</string>
@@ -94,4 +96,5 @@
     <string name="random_prompt_17">Short emoji story of end of dinosaurs</string>
     <string name="random_prompt_18">List of languages you can translate</string>
     <string name="random_prompt_19">Generate HTML page about cats</string>
+
 </resources>
