--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,8 @@
     <string name="enter_prompt">Enter your prompt…</string>
     <string name="elipsis">…</string>
     <string name="response_thinking">Thinking…</string>
-    <string name="toast_dictation_subscription">Response dictation coming soon…</string>
+    <string name="toast_tts_not_supported">Unfortunately Google Text to Speech doesn\'t support
+        your language :(</string>
     <string name="toast_enter_prompt">First, enter a prompt.</string>
     <string name="toast_no_internet">No internet connection. Connect and retry.</string>
     <string name="toast_prompt_truncated">Maximum prompt length reached:
@@ -60,6 +61,7 @@
     <string name="title_activity_settings">Settings</string>
     <string name="dictation">Dictation</string>
     <string name="automatically_dictate_responses">Automatically dictate responses</string>
+    <string name="dictation_speed">Speech speed</string>
 
     <!-- Terms Activity -->
     <string name="terms">Terms</string>
