--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,8 +48,11 @@
     <string name="login_failed">Login failed:</string>
     <string name="logged_out">Logged out</string>
     <string name="upgrade">Upgrade</string>
-    <string name="remove_limits_ads">Remove all prompt and response limits, and remove all ads! Coming soon…</string>
-    <string name="subscribe">Subscribe</string>
+    <string name="remove_limits">Remove prompt and response limits by purchasing additional word
+        counts: coming soon!</string>
+    <string name="toast_billing_error">Billing error. Please enable Google Play billing and retry.</string>
+    <string name="toast_device_no_in_app_products">Sorry, your device does not support in app purchases.</string>
+    <string name="toast_problem_loading_product_details">Problem connecting to Google billing.</string>
     <string name="apply_early_access">To gain early access to subscription and test new features and releases, apply as a tester:</string>
     <string name="join_testers">Join Test Group</string>
     <string name="testing_warning">***WARNING: subscription is in early development. By subscribing,
@@ -69,9 +72,6 @@
     <string name="openai_terms_header">OpenAI\'s Terms Agreement</string>
     <string name="agree_to_terms">By using this app, you have agreed to the following terms:</string>
     <string name="show_terms_agreement">Show terms agreement at startup</string>
-    <string name="toast_billing_error">Billing error. Please enable Google Play billing and retry.</string>
-    <string name="toast_device_no_subscriptions">Sorry, your device does not support subscriptions.</string>
-    <string name="toast_problem_loading_subscription_details">Problem connecting to Google billing.</string>
     <string name="html_app_terms_of_use"><a href="https://chatgpt3-android.app/terms-of-use.html">Terms of Use</a></string>
     <string name="html_app_privacy_policy"><a href="https://chatgpt3-android.app/privacy-policy.html">Privacy Policy</a></string>
     <string name="html_openai_terms_of_use"><a href="https://openai.com/terms/">Terms of Use</a></string>
