--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,13 +52,10 @@
         counts: coming soon!</string>
     <string name="toast_billing_error">Billing error. Please enable Google Play billing and retry.</string>
     <string name="toast_device_no_in_app_products">Sorry, your device does not support in app purchases.</string>
-    <string name="toast_problem_loading_product_details">Problem connecting to Google billing.</string>
-    <string name="apply_early_access">To gain early access to subscription and test new features and releases, apply as a tester:</string>
-    <string name="join_testers">Join Test Group</string>
-    <string name="testing_warning">***WARNING: subscription is in early development. By subscribing,
-        you have agreed to contribute to testing the feature, which may not result in immediate
-        implementation of additional features. Please notify me of such issue, so I can fix it asap.</string>
-    <string name="require_gmail">***Gmail address required to join test Android ChatGPT3 group.***</string>
+    <string name="toast_problem_loading_product_details">Problem loading in-app product details.</string>
+    <string name="testing_warning">***WARNING: in-app purchases are early development. By purchasing,
+        you have agreed to be an early tester, which may not result in intended behavior such as
+        immediately enabling additional features. Please notify us if you encounter any issues.</string>
 
     <!-- Settings Activity -->
     <string name="title_activity_settings">Settings</string>
